[package]
name = "eur-tauri"
version = "0.0.0"
edition = "2024"
authors.workspace = true
publish = false

[lib]
doctest = false
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "eur-tauri"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri-utils = "2.8.0"                                                       # single entry removes second 8.6 s build
tauri-plugin-stronghold = "2.3.1"
anyhow = { workspace = true }
eur-secret = { workspace = true }
eur-prompt-kit = { workspace = true }
keyring = { workspace = true }
backtrace = { version = "0.3.76", optional = true }
reqwest = { version = "0.12.24", features = ["json", "native-tls"] }
serde = { workspace = true }
serde_json = { version = "1.0", features = ["std", "arbitrary_precision"] }
tauri = { version = "2.9.2", features = ["unstable", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
eur-vision = { workspace = true }
eur-screen-position = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
# The features here optimize for performance.
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tokio-stream = { workspace = true }
tracing-appender = "0.2.3"
tracing-forest = { version = "0.3.0" }
open = "5"
url = "2.5.4"
dirs = "6.0.0"
posthog-rs = { workspace = true }
color-thief = "0.2.2"

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
sentry = { workspace = true, features = ["log", "logs", "tracing"] }

eur-proto = { workspace = true }
eur-timeline = { workspace = true }
eur-client-grpc = { workspace = true }
eur-personal-db = { workspace = true }
eur-native-messaging = { workspace = true }
eur-settings = { workspace = true }
eur-proto-client = { workspace = true }
eur-user = { workspace = true }
eur-eurora-provider = { workspace = true }
eur-encrypt = { workspace = true }
eur-activity = { workspace = true }

chrono = { workspace = true }
defer = "0.2.1"
futures = { workspace = true }
tonic = { workspace = true }
lazy_static = "1.4.0"
pollster = "0.4"
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = { version = "0.0.9" }
tauri-specta = { version = "2.0.0-rc.21", features = [
    "javascript",
    "typescript",
] }
taurpc = { version = "0.5.1" }
base64 = "0.22.1"
dotenv = "0.15.0"
uuid = { workspace = true }
ferrous-llm-core = { workspace = true, features = ["specta"] }
async_from = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"

[features]
default = ["custom-protocol", "devtools"]
## A forwarding to all crates that have windows-specific adjustments for testing on non-Windows.
windows = []
devtools = ["tauri/devtools"]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

error-context = ["dep:backtrace"]

# Use mock keyring for testing (e2e tests, CI environments without system keyring)
mock-keyring = []
