[package]
name = "eur-timeline"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Timeline storage for capturing system state over time"

[dependencies]
eur-proto = { path = "../../proto/eur-proto" }
image.workspace = true
eur-native-messaging = { path = "../eur-native-messaging" }
eur-prompt-kit = { path = "../../common/eur-prompt-kit" }
eur-activity = { path = "../eur-activity" }
anyhow = { workspace = true }
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
parking_lot = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
x11rb = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
] }
