[package]
name = "eur-timeline"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Timeline storage for capturing system state over time"

[dependencies]
eur-proto = { workspace = true }
eur-native-messaging = { workspace = true }
eur-activity = { workspace = true }
eur-fs = { workspace = true }
eur-personal-db = { workspace = true }
image.workspace = true
ferrous-focus = { version = "0.2.5" }
# eur-prompt-kit = { path = "../../common/eur-prompt-kit" }
ferrous-llm-core = { workspace = true }
anyhow = { workspace = true }
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, default-features = false, features = [
    "rt",
    "sync",
    "time",
    "macros",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
x11rb = "0.13.2"
ferrous-llm = { workspace = true, features = ["openai"] }
thiserror = { workspace = true }
async-trait = "0.1"
rand = { workspace = true }
dirs = { workspace = true }
orion = "0.17.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
] }
