
[package]
name = "eur-user"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { workspace = true }
eur-secret = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { version = "1.0", features = ["std", "arbitrary_precision"] }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
eur-auth-client = { workspace = true }
base64 = "0.22.1"
eur-proto = { workspace = true }
tokio = { workspace = true }
