
[package]
name = "eur-user"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { workspace = true }
eur-secret = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { version = "1.0", features = ["std", "arbitrary_precision"] }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
eur-auth-client = { workspace = true }
base64 = { workspace = true }
eur-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
sha2 = "0.10.9"
