[package]
name = "eur-vision"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Vision util for capturing screen, window and ocr'ing"

[dependencies]
tokio = { workspace = true }
image = { workspace = true }
rusty-tesseract = "1.1.10"
anyhow = "1.0.97"
xcap = { git = "https://github.com/AndreRoelofs/xcap.git", branch = "ar-branch-3" }
wgpu = "25.0.0"
bytemuck = "1.22.0"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
base64 = "0.13.0"
eur-ocr = { path = "../../common/eur-ocr" }
