[package]
name = "eur-vision"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Vision util for capturing screen, window and ocr'ing"

[dependencies]
tokio = { workspace = true }
image = { workspace = true }
rusty-tesseract = "1.1.10"
anyhow = { workspace = true }
xcap = { version = "0.7.0" }
wgpu = "25.0.2"
bytemuck = "1.23.2"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
base64.workspace = true
eur-ocr = { workspace = true }
tracing = { workspace = true }
