[package]
name = "euro-activity"
version = "0.0.0"
edition.workspace = true
description = "Refactored activity system with enum-based type-safe design"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "specta"]

[dependencies]
agent-chain-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
enum_dispatch = { workspace = true }
euro-auth = { workspace = true }
euro-browser = { workspace = true }
euro-encrypt = { workspace = true }
euro-native-messaging = { workspace = true }
focus-tracker = { workspace = true, features = ["async"] }
humantime-serde = { workspace = true }
image = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
proto-gen = { workspace = true }
regex = { workspace = true }
resvg = { version = "0.45" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive", "function"] }
taurpc = { version = "0.6.0" }
thiserror = { workspace = true }
tiny-skia = "0.11"
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
usvg = { version = "0.45" }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = []
compat = []  # Enable backward compatibility layer
