[package]
name = "euro-api-codegen"
version = "0.0.0"
edition.workspace = true
description = "Workspace-level orchestrator that emits TypeScript bindings for every Eurora HTTP service wire type into packages/shared/src/lib/bindings."
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
activity-core = { workspace = true, features = ["specta"] }
asset-core = { workspace = true, features = ["specta"] }
auth-core = { workspace = true, features = ["specta"] }
thread-core = { workspace = true, features = ["specta"] }

anyhow = { workspace = true }
specta = { workspace = true, features = ["derive"] }
specta-serde = "0.0.12"
specta-typescript = { workspace = true }
