[package]
name = "euro-assets"
version = "0.0.0"
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["tonic-prost"]

[dependencies]
agent-chain-core = { workspace = true }
agent-chain-grpc = { workspace = true }
anyhow = { workspace = true }
asset-models = { workspace = true }
async-stream = "0.3.1"
async-trait = { workspace = true }
euro-activity = { workspace = true }
euro-auth = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["channel", "tls-native-roots"] }
tonic-prost = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
