[package]
name = "euro-auth"
version = "0.0.0"
edition.workspace = true
description = "Authentication service for Eurora"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "specta"]

[dependencies]
anyhow = { workspace = true }
auth-core = { workspace = true, features = ["specta"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
euro-endpoint = { workspace = true }
euro-secret = { workspace = true }
humantime-serde = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
specta = { workspace = true, features = ["derive", "function"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tracing = { workspace = true }
