[package]
name = "euro-auth"
version = "0.0.0"
edition.workspace = true
description = "Authentication service for Eurora"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "specta"]

[dependencies]
anyhow = { workspace = true }
auth-core = { workspace = true, features = ["specta"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
euro-endpoint = { workspace = true }
euro-secret = { workspace = true }
humantime-serde = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
specta = { workspace = true, features = ["derive", "function"] }
tauri = { workspace = true, optional = true }
tauri-specta = { workspace = true, optional = true, features = [
  "derive",
  "typescript",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tracing = { workspace = true }

[features]
default = []
## Tauri integration: typed `AuthStateChanged` event, an `install` helper
## that registers the manager as Tauri-managed state and spawns the
## bus → frontend bridge, and an `auth_manager` lookup helper. Pulled
## in by `euro-tauri` and `euro-mobile`; non-Tauri consumers (e.g.
## `euro-thread`, `euro-timeline`) build without it.
tauri = ["dep:tauri", "dep:tauri-specta"]
