[package]
name = "euro-bridge-protocol"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"
description = "Wire protocol shared between the Eurora desktop app and connected clients (browser native-messaging hosts, Office.js add-ins, ...)."

[dependencies]
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

anyhow = { workspace = true, optional = true }
specta-serde = { version = "0.0.12", optional = true }
specta-swift = { version = "0.0.3", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
codegen = ["dep:anyhow", "dep:specta-serde", "dep:specta-swift"]

[[bin]]
name = "euro-bridge-protocol"
path = "src/bin/codegen.rs"
required-features = ["codegen"]

[lints]
workspace = true
