[package]
name = "euro-bridge-protocol"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Wire protocol shared between the Eurora desktop app and connected clients (browser native-messaging hosts, Office.js add-ins, ...)."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

anyhow = { workspace = true, optional = true }
specta-serde = { version = "0.0.12", optional = true }
specta-swift = { version = "0.0.3", optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["raw_value"] }

[features]
default = []
codegen = ["dep:anyhow", "dep:specta-serde", "dep:specta-swift"]

[lints]
workspace = true
