[package]
name = "euro-bridge"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-server = { workspace = true }
dashmap = { workspace = true }
euro-bridge-protocol = { workspace = true }
euro-process = { workspace = true }
euro-transport-policy = { workspace = true }
futures-util = { workspace = true }
request-correlator = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
