[package]
name = "euro-browser"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
axum = { workspace = true, features = ["ws"] }
dashmap = "6.1.0"
euro-bridge-protocol = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tracing = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
