[package]
name = "euro-browser"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-server = { workspace = true }
dashmap = "6.1.0"
euro-bridge-protocol = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tracing = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }

[lints.clippy]
all = "deny"
correctness = "deny"
perf = "deny"
