[package]
name = "euro-browser"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
euro-bridge-protocol = { workspace = true }
euro-process = { workspace = true }
eurora-tools-web = { workspace = true, features = ["specta"] }
eurora-tools-youtube = { workspace = true, features = ["specta"] }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

specta-serde = { version = "0.0.12", optional = true }
specta-typescript = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = []
codegen = ["dep:specta-serde", "dep:specta-typescript"]

[[bin]]
name = "euro-native-messaging"
path = "src/main.rs"

[[bin]]
name = "euro-browser-codegen"
path = "src/bin/codegen.rs"
required-features = ["codegen"]

[lints]
workspace = true
