[package]
name = "euro-chat-client"
version = "0.0.0"
edition.workspace = true

[dependencies]
agent-chain = { workspace = true, features = [
  "anthropic",
  "ollama",
  "openai",
] }
agent-chain-core = { workspace = true }
agent-chain-grpc = { workspace = true }
anyhow = { workspace = true }
async_from = { workspace = true }
async-stream = "0.3.1"
async-trait = { workspace = true }
euro-auth = { workspace = true }
# euro-user = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["channel", "tls-native-roots"] }
tonic-async-interceptor = "0.14.1"
tonic-prost = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = "2.5.1"

[build-dependencies]
tonic-prost-build = { workspace = true }
