[package]
name = "euro-encrypt"
version = "0.0.0"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"
license-file = "LICENSE"
edition.workspace = true
description = "Handle user encryption and related functionalities"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { version = "0.10.0", features = ["std"] }
euro-secret = { workspace = true }
hkdf = { version = "0.12.0" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { version = "0.10.0" }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt"] }
