[package]
name = "euro-encrypt"
version = "0.0.0"
edition.workspace = true
description = "Handle user encryption and related functionalities"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true, features = ["std"] }
euro-secret = { workspace = true }
hkdf = { version = "0.12.0" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt"] }
