[package]
name = "euro-endpoint"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["channel", "tls-native-roots"] }
