[package]
name = "euro-endpoint"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[features]
default = ["tls-native-roots"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["channel"] }
tracing = { workspace = true }
