[package]
name = "euro-endpoint"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
default = ["tls-native-roots"]
tls-native-roots = ["reqwest/rustls-tls-native-roots"]
tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
