[package]
name = "euro-fs"
version = "0.0.0"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"
license-file = "LICENSE"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["std"] }
toml = { workspace = true }
walkdir = "2.5.0"
