[package]
name = "euro-mobile"
version = "0.0.0"
edition.workspace = true
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
doctest = false

[[bin]]
name = "euro-mobile"
path = "src/main.rs"
test = false

[dependencies]
agent-chain-core = { workspace = true, features = ["prost"] }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
auth-core = { workspace = true, features = ["specta"] }
backon = { workspace = true }
euro-auth = { workspace = true }
euro-encrypt = { workspace = true }
euro-endpoint = { workspace = true, features = ["tls-webpki-roots"] }
euro-secret = { workspace = true }
euro-settings = { workspace = true }
euro-thread = { workspace = true }
euro-user = { workspace = true }
futures = { workspace = true }
proto-gen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision", "std"] }
specta = { workspace = true, features = ["derive", "function"] }
specta-typescript = { version = "0.0.10" }
tauri = { version = "2.10.2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-oauth-session = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
# taurpc = { git = "https://github.com/AndreRoelofs/TauRPC.git", branch = "chore/specta-bump" }
taurpc = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread"] }
tokio-util = "0.7"
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol", "devtools"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[lints.clippy]
all = "deny"
correctness = "deny"
perf = "deny"
